# inference-server

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  buf.gen.yaml  justfile  pyproject.toml  skaffold.yaml
config/: local-values.yaml
docker/: inference.Dockerfile  mlflow.Dockerfile
helm/inference-server/: Chart.yaml  values.yaml
helm/inference-server/files/: envoy.yaml
helm/inference-server/templates/: NOTES.txt  _helpers.tpl  configmap-envoy.yaml  configmap-inference.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/inference-server/templates/tests/: test-connection.yaml
inference-protocol/: Cargo.toml  README.md
inference-protocol/src/: lib.rs  tract.rs
inference-server/: Cargo.toml
inference-server/src/: error.rs  handler.rs  inference.rs  lib.rs  main.rs  repository.rs
inference-server/src/models/: mod.rs  onnx.rs
inference-server/src/repositories/: mod.rs  storage.rs
inference-server/src/service/: inference.rs  mod.rs  repository.rs
inference-server/tests/data/: model.onnx  repo.yaml
mlflow-client/: Cargo.toml  buf.gen.yaml
mlflow-client/examples/: flow.rs
mlflow-client/src/: lib.rs
mlflow-client/src/client/: backoff.rs  mock_server.rs  mod.rs  pagination.rs  retry.rs
notebooks/: example.onnx  rf_iris.onnx  simple_tensorflow.ipynb  simplified.onnx
notebooks/my_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/my_model/variables/: variables.data-00000-of-00001  variables.index
onnx-flight/: Cargo.toml
onnx-flight/src/: lib.rs
python/: buf.gen.yaml
python/inference-client/: pyproject.toml
python/inference-client/inference_client/aio/: __init__.py  _utils.py  model.py  services.py
scripts/: client.ipynb  onnx_lightgbm.py
