[tool.poetry]
name = "datafusion-onnx"
version = "0.1.0"
description = "High performance model serving"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

scikit-learn = "^1.2.0"
pyarrow = "^10.0.1"
numpy = "^1.23.5"
onnx-simplifier = "^0.4.10"
onnxmltools = "^1.11.1"
tensorflow = "^2.11.0"
tf2onnx = "^1.13.0"
keras2onnx = "^1.7.0"
onnxruntime = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
ruff = "^0.0.183"
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
