[tool.poetry]
name = "datafusion-onnx"
version = "0.1.0"
description = "High performance model serving"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

# workspace dependencies
inference-client = { path = "python/inference-client" }

# pypi dependenceis
scikit-learn = "^1.1"
pyarrow = "^10.0.1"
numpy = "^1.23.5"
onnx-simplifier = "^0.4.10"
onnxmltools = "^1.11.1"
tensorflow = "^2.11.0"
tf2onnx = "^1.13.0"
keras2onnx = "^1.7.0"
onnxruntime = "^1.13.1"
skl2onnx = "^1.13"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.12.0" }
ruff = "^0.0.183"
ipykernel = "^6.19.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color = true
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
exclude = [
  '__pycache__',
  '.git',
  '.ipynb_checkpoints',
  '.venv',
  '.tox',
  '.mypy_cache',
  '.pytest_cache',
  '.vscode',
  '.github',
  'build',
  'dist',
  'typestubs',
  '*.pyi',
]
ignore = ['E501']
line-length = 120
select = ['B', 'C', 'E', 'F', "I", "S", 'W']

[tool.ruff.per-file-ignores]
# allow asserts in test files (bandit)
"test_*" = ["S101"]
"python/inference-client/inference_client/gen/*" = ["F841"]

[tool.ruff.isort]
known-first-party = ["inference_client"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
venvPath = "."
venv = ".venv"
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "python/inference-client/inference_client/gen/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
