[tool.poetry]
name = "datafusion-onnx"
version = "0.1.0"
description = "High performance model serving"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

# workspace dependencies
inference-client = { path = "python/inference-client", develop = true }

[tool.poetry.group.examples.dependencies]
hummingbird-ml = "^0.4.7"
lightgbm = "^3.3.3"
llvmlite = "^0.39"
mlflow = "^2"
numba = "^0.56"
numpy = "^1.23.5"
onnx-simplifier = "^0.4.10"
onnxmltools = "^1.11.1"
onnxruntime = "^1.13.1"
pandas = "^1.5.2"
scikit-learn = "^1.1"
torch = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.12.0" }
ruff = "^0.0.192"
ipykernel = "^6.19.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color = true
line-length = 112
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
exclude = [
  '__pycache__',
  '.git',
  '.ipynb_checkpoints',
  '.venv',
  '.tox',
  '.mypy_cache',
  '.pytest_cache',
  '.vscode',
  '.github',
  'build',
  'dist',
  'typestubs',
  '*.pyi',
]
ignore = ['E501']
line-length = 112
select = ['B', 'C', 'E', 'F', "I", "S", 'W']

[tool.ruff.per-file-ignores]
"test_*" = [
  "S101", # allow asserts in test files (bandit)
]
"python/inference-client/inference_client/gen/*" = [
  "F841", # Local variable is assigned to but never used
  "S107", # Possible hardcoded password
]

[tool.ruff.isort]
known-first-party = ["inference_client"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
reportPrivateImportUsage = false
reportShadowedImports = false
venvPath = "."
venv = ".venv"
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "python/inference-client/inference_client/gen/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
