[package]
name = "inference-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", default-features = false }
pbjson = "0.5.1"
prost = { version = "0.11", default-features = false }
serde = "1"
tonic = { version = "0.8", default-features = false, features = [
  "transport",
  "codegen",
  "prost",
] }
tract-onnx = { version = "0.18.5", optional = true }
tract-data = { version = "0.18.5", optional = true }

[features]
default = ["onnx"]
onnx = ["tract-onnx", "tract-data"]
