[package]
name = "inference-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace dependencies
inference-protocol = { path = "../inference-protocol", version = "0.1" }

# creates.io dependencies
bytes = { version = "1", default-features = false }
prost = { version = "0.11", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"] }
thiserror = "1"
tonic = { version = "0.8", default-features = false, features = [
  "transport",
  "codegen",
  "prost",
] }
tract-onnx = { version = "0.18.5" }
