[package]
name = "inference-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace dependencies
inference-protocol = { path = "../inference-protocol", version = "0.1" }

# creates.io dependencies
bytes = { version = "1", default-features = false }
dashmap = "5.4"
futures = "*"
object_store = "0.5.2"
prost = { version = "0.11", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"] }
serde = "1"
serde_yaml = "0.9.16"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "parking_lot"] }
tonic = { version = "0.8", default-features = false, features = [
  "transport",
  "codegen",
  "prost",
] }
tonic-health = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tract-hir = { version = "0.18.5" }
tract-onnx = { version = "0.18.5" }

[features]
default = ["onnx"]
onnx = ["inference-protocol/onnx"]
