[package]
name = "onnx-flight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract = "0.18.5"
rand = { version = "0.8.4", features = ["small_rng"] }
tract-onnx = "0.18.5"
tract-core = "0.18.5"
prost = "0.11.3"
tonic = "0.8.3"
